--- a/app/build.gradle
+++ b/app/build.gradle
@@ -20,9 +20,12 @@ android {
 }
 
 
+
 dependencies {
     compile project(':KudanAR')
     compile 'com.android.support:appcompat-v7:23.1.1'
-    compile 'com.android.support.constraint:constraint-layout:+'
+    compile 'com.android.support.constraint:constraint-layout:1.0.1'
+    compile 'com.google.android.gms:play-services-maps:10.2.0'
+    compile 'com.google.android.gms:play-services-location:10.2.0'
     testCompile 'junit:junit:4.12'
 }
